--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <button id="addTaskBtn">Agregar Tarea</button>
     </div>
     <ul id="taskList">
-      <!-- Las tareas se agregarán aquí dinámicamente -->
+      <!-- las tareas irian aqui y se poblarian dinamicamente -->
     </ul>
   </div>
   <script src="app.js"></script>
